# nanobot-fork

./: .gitignore  README.md  pyproject.toml
nanobot/api/: __init__.py  argus_client.py  conversation.py  daily_digest.py  email_client.py  github_watcher.py  p2p_protocol.py  server.py
nanobot/channels/: telegram.py
nanobot/cli/: __init__.py
nanobot/skills/argus/: SKILL.md
nanobot/skills/argus/scripts/: argus-health.sh  argus-send.sh
nanobot/skills/claude-code/: SKILL.md
nanobot/skills/claude-code/scripts/: ask-claude.sh  claude-status.sh
nanobot/skills/email/: SKILL.md
