[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nanobot-fork"
version = "0.1.4.dev1"
description = "Heinrich's fork of nanobot-ai with custom patches"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "croniter>=2.0.0",
    "httpx[socks]>=0.25.0",
    "lark-oapi>=1.0.0",
    "litellm>=1.0.0",
    "loguru>=0.7.0",
    "pydantic-settings>=2.0.0",
    "pydantic>=2.0.0",
    "python-telegram-bot[socks]>=21.0",
    "readability-lxml>=0.8.0",
    "rich>=13.0.0",
    "socksio>=1.0.0",
    "typer>=0.9.0",
    "websocket-client>=1.6.0",
    "websockets>=12.0",
]

[project.scripts]
nanobot = "nanobot.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["nanobot"]
